--- a/tiptoe-api/src/main/resources/static/index.html
+++ b/tiptoe-api/src/main/resources/static/index.html
@@ -32,6 +32,7 @@
                     <input type="text" id="name" class="form-control" placeholder="Your name here...">
                 </div>
                 <button id="send" class="btn btn-default" type="submit">Send</button>
+                <button id="songs" class="btn btn-default" type="submit">Songs</button>
             </form>
         </div>
     </div>
