--- a/tiptoe-api/src/main/resources/static/index.html
+++ b/tiptoe-api/src/main/resources/static/index.html
@@ -10,46 +10,61 @@
     <script src="/app.js"></script>
 </head>
 <body>
+
 <noscript><h2 style="color: #ff0000">Seems your browser doesn't support Javascript! Websocket relies on Javascript being
     enabled. Please enable
     Javascript and reload this page!</h2></noscript>
+    
 <div id="main-content" class="container">
     <div class="row">
-        <div class="col-md-6">
-            <form class="form-inline">
-                <div class="form-group">
-                    <label for="connect">WebSocket connection:</label>
-                    <button id="connect" class="btn btn-default" type="submit">Connect</button>
-                    <button id="disconnect" class="btn btn-default" type="submit" disabled="disabled">Disconnect
-                    </button>
-                </div>
-            </form>
-        </div>
-        <div class="col-md-6">
-            <form class="form-inline">
-                <div class="form-group">
-                    <label for="name">What is your name?</label>
-                    <input type="text" id="name" class="form-control" placeholder="Your name here...">
-                </div>
-                <button id="send" class="btn btn-default" type="submit">Send</button>
-                <button id="songs" class="btn btn-default" type="submit">Songs</button>
-            </form>
+        <div class="col-md-12">
+        	<div id="player">
+	        	<h1>Player</h1>
+	           	<button id="play" class="btn btn-default">Play</button>
+	            <button id="stop" class="btn btn-default">Stop</button>
+        	</div>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-12">
-            <table id="conversation" class="table table-striped">
+        <div class="col-md-6">
+        	<h1>Library</h1>
+            <table id="library-folders" class="table table-striped">
                 <thead>
                 <tr>
-                    <th>Greetings</th>
+                    <th>Folder name</th>
                 </tr>
                 </thead>
-                <tbody id="greetings">
+                <tbody>
+                </tbody>
+            </table>
+            <table id="library-songs" class="table table-striped">
+                <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Artist</th>
+                    <th>Album</th>
+                    <th></th>
+                </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </div>
+        <div class="col-md-6">
+        	<h1>Playlist</h1>
+            <table id="playlist" class="table table-striped">
+                <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Artist</th>
+                    <th>Album</th>
+                </tr>
+                </thead>
+                <tbody id="playlist-songs">
                 </tbody>
             </table>
         </div>
     </div>
-    </form>
 </div>
 </body>
 </html>
