Add player based on beads library

--- a/tiptoe-api/src/main/resources/static/index.html
+++ b/tiptoe-api/src/main/resources/static/index.html
@@ -21,6 +21,7 @@
         	<div id="player">
 	        	<h1>Player</h1>
 	           	<button id="play" class="btn btn-default">Play</button>
+	           	<button id="pause" class="btn btn-default">Pause</button>
 	            <button id="stop" class="btn btn-default">Stop</button>
         	</div>
         </div>
