Improve player frontend

--- a/tiptoe-api/src/main/resources/static/index.html
+++ b/tiptoe-api/src/main/resources/static/index.html
@@ -7,6 +7,7 @@
     <script src="/webjars/jquery/jquery.min.js"></script>
     <script src="/webjars/sockjs-client/sockjs.min.js"></script>
     <script src="/webjars/stomp-websocket/stomp.min.js"></script>
+    <script src="libs/d3-v4.9.1/d3.min.js"></script>
     <script src="/app.js"></script>
 </head>
 <body>
@@ -23,6 +24,7 @@
 	           	<button id="play" class="btn btn-default">Play</button>
 	           	<button id="pause" class="btn btn-default">Pause</button>
 	            <button id="stop" class="btn btn-default">Stop</button>
+	            <div id="wave" class=""></div>
         	</div>
         </div>
     </div>
