--- a/tiptoe-api/src/main/resources/static/index.html
+++ b/tiptoe-api/src/main/resources/static/index.html
@@ -20,10 +20,18 @@
     <div class="row">
         <div class="col-md-12">
         	<div id="player">
-	        	<h1>Player</h1>
-	           	<button id="play" class="btn btn-default">Play</button>
-	           	<button id="pause" class="btn btn-default">Pause</button>
-	            <button id="stop" class="btn btn-default">Stop</button>
+	        	<div><h1>Player</h1></div>
+			    <div>
+			    	<button id="play" class="btn btn-default"><span class="glyphicon glyphicon-play"></span></button>
+			        <button id="pause" class="btn btn-default"><span class="glyphicon glyphicon-pause"></span></button>
+			        <button id="stop" class="btn btn-default"><span class="glyphicon glyphicon-stop"></span></button>
+			    </div>
+			    <div id="speed">
+		            Speed <span class="glyphicon glyphicon-repeat"></span><input type="range" min="0.7" max="1.3" step="0.01"/>
+			    </div>
+			    <div id="pitch">
+		            Pitch <span class="glyphicon glyphicon-repeat"></span><input type="range" min="0.7" max="1.3" step="0.01"/>
+			    </div>
 	            <div id="wave" class=""></div>
         	</div>
         </div>
