--- a/tiptoe-api/src/main/resources/static/index.html
+++ b/tiptoe-api/src/main/resources/static/index.html
@@ -21,10 +21,10 @@
         <div class="col-md-12">
         	<div id="player">
 	        	<div><h1>Player</h1></div>
-			    <div>
-			    	<button id="play" class="btn btn-default"><span class="glyphicon glyphicon-play"></span></button>
-			        <button id="pause" class="btn btn-default"><span class="glyphicon glyphicon-pause"></span></button>
-			        <button id="stop" class="btn btn-default"><span class="glyphicon glyphicon-stop"></span></button>
+			    <div class="controls">
+			    	<button class="play btn btn-default"><span class="glyphicon glyphicon-play"></span></button>
+			        <button class="pause btn btn-default"><span class="glyphicon glyphicon-pause"></span></button>
+			        <button class="stop btn btn-default"><span class="glyphicon glyphicon-stop"></span></button>
 			    </div>
 			    <div id="speed">
 		            Speed <span class="glyphicon glyphicon-repeat"></span><input type="range" min="0.7" max="1.3" step="0.01"/>
@@ -61,19 +61,26 @@
                 </tbody>
             </table>
         </div>
-        <div class="col-md-6">
-        	<h1>Playlist</h1>
-            <table id="playlist" class="table table-striped">
-                <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Artist</th>
-                    <th>Album</th>
-                </tr>
-                </thead>
-                <tbody id="playlist-songs">
-                </tbody>
-            </table>
+        <div class="col-md-6 playlist">
+        	<div id="playlist">
+	       		<div><h1>Playlist</h1></div>
+	        	<div class="controls">
+	        		<button class="play btn btn-default"><span class="glyphicon glyphicon-play"></span></button>
+	        		<button class="search btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
+	        		<button class="save btn btn-default"><span class="glyphicon glyphicon-save-file"></span></button>
+	        	</div>
+	            <table id="playlist" class="table table-striped">
+	                <thead>
+	                <tr>
+	                    <th>Name</th>
+	                    <th>Artist</th>
+	                    <th>Album</th>
+	                </tr>
+	                </thead>
+	                <tbody id="playlist-songs">
+	                </tbody>
+	            </table>
+            </div>
         </div>
     </div>
 </div>
