--- a/tiptoe-api/src/main/resources/static/index.html
+++ b/tiptoe-api/src/main/resources/static/index.html
@@ -20,11 +20,12 @@
     <div class="row">
         <div class="col-md-12">
         	<div id="player">
-	        	<div><h1>Player</h1></div>
+	        	<div><h1><span class="glyphicon glyphicon-play-circle"></span> Player</h1></div>
 			    <div class="controls">
 			    	<button class="play btn btn-default"><span class="glyphicon glyphicon-play"></span></button>
 			        <button class="pause btn btn-default"><span class="glyphicon glyphicon-pause"></span></button>
 			        <button class="stop btn btn-default"><span class="glyphicon glyphicon-stop"></span></button>
+			        <button class="loop btn btn-default"><span class="glyphicon glyphicon-retweet"></span></button>
 			    </div>
 			    <div id="speed">
 		            Speed <span class="glyphicon glyphicon-repeat"></span><input type="range" min="0.7" max="1.3" step="0.01"/>
@@ -38,7 +39,7 @@
     </div>
     <div class="row">
         <div class="col-md-6">
-        	<h1>Library</h1>
+        	<h1><span class="glyphicon glyphicon-music"></span> Music Library</h1>
             <table id="library-folders" class="table table-striped">
                 <thead>
                 <tr>
@@ -54,7 +55,7 @@
                     <th>Name</th>
                     <th>Artist</th>
                     <th>Album</th>
-                    <th></th>
+                    <th><span class="glyphicon glyphicon-list"></span></th>
                 </tr>
                 </thead>
                 <tbody>
@@ -63,10 +64,12 @@
         </div>
         <div class="col-md-6 playlist">
         	<div id="playlist">
-	       		<div><h1>Playlist</h1></div>
+	       		<div><h1><span class="glyphicon glyphicon-list"></span> Playlist</h1></div>
 	        	<div class="controls">
 	        		<button class="play btn btn-default"><span class="glyphicon glyphicon-play"></span></button>
-	        		<button class="search btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
+	        		<button class="random btn btn-default"><span class="glyphicon glyphicon-random"></span></button>
+	        		<button class="loop btn btn-default"><span class="glyphicon glyphicon-retweet"></span></button>
+	        		<button class="search btn btn-default"><span class="glyphicon glyphicon-folder-open"></span></button>
 	        		<button class="save btn btn-default"><span class="glyphicon glyphicon-save-file"></span></button>
 	        	</div>
 	            <table id="playlist" class="table table-striped">
