--- a/tiptoe-api/src/main/resources/static/index.html
+++ b/tiptoe-api/src/main/resources/static/index.html
@@ -43,7 +43,7 @@
             <table id="library-folders" class="table table-striped">
                 <thead>
                 <tr>
-                    <th>Folder name</th>
+                    <th>Folders</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -70,7 +70,7 @@
 	        		<button class="random btn btn-default"><span class="glyphicon glyphicon-random"></span></button>
 	        		<button class="loop btn btn-default"><span class="glyphicon glyphicon-retweet"></span></button>
 	        		<button class="search btn btn-default"><span class="glyphicon glyphicon-folder-open"></span></button>
-	        		<button class="save btn btn-default"><span class="glyphicon glyphicon-save-file"></span></button>
+	        		<button class="save btn btn-default"><span class="glyphicon glyphicon-save"></span></button>
 	        	</div>
 	            <table id="playlist" class="table table-striped">
 	                <thead>
